# projet-gitlab-runner

./: .gitlab-ci.yml  README copy.md  README.md  pyproject.toml
src/my_arithmetic/: gcd.py
src/my_arithmetic/my_arithmetic_tmaucotel/: __init__.py  test_my-arithmetic.py
src/my_arithmetic_tmaucotel/: __init__.py  test_my-arithmetic.py
tests/: test_gcd.py
