[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-tmaucotel"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/my-arithmetic-tmaucotel#readme"
Issues = "https://github.com/U.N. Owen/my-arithmetic-tmaucotel/issues"
Source = "https://github.com/U.N. Owen/my-arithmetic-tmaucotel"

[tool.hatch.version]
path = "src/my_arithmetic_tmaucotel/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_tmaucotel tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_tmaucotel", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_tmaucotel/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_tmaucotel = ["src/my_arithmetic_tmaucotel", "*/my-arithmetic-tmaucotel/src/my_arithmetic_tmaucotel"]
tests = ["tests", "*/my-arithmetic-tmaucotel/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
